--- a/Template-Packages-RHEL.yml
+++ b/Template-Packages-RHEL.yml
@@ -22,9 +22,14 @@
     - sudo
     - libselinux-python
     - git
+    - rsyslog
 - name: update system (RHEL)
   when: ansible_os_family == "RedHat"
   command: yum upgrade -y
 - name: set selinux to permissive
   when: ansible_os_family == "RedHat"
   selinux: policy=targeted state=permissive
+- name: disable sysklogd (if present)
+  service: name=sysklogd state=disabled
+- name: enable rsyslog (if not)
+  service: name=rsyslog state=enabled
