--- a/Template-Test-Init-System.yml
+++ b/Template-Test-Init-System.yml
@@ -7,5 +7,5 @@
   stat: path=/lib/init/upstart-job get_md5=no
   register: upstart
 
-- debug: var=systemd
-- debug: var=systemd
+#- debug: var=systemd
+#- debug: var=systemd
