--- a/Template.yml
+++ b/Template.yml
@@ -15,15 +15,6 @@
     - name: remove cloud user
       user: name=cloud state=absent
 
-    - name: remove old init files
-      file: path={{ item }} state=absent
-      with_items: 
-        - /etc/init.d/firstboot-cloudstack
-        - /etc/init.d/cloudstack-run-userdata
-        - /etc/init.d/cloudstack-set-guest-password
-        - /etc/init.d/cloudstack-set-guest-sshkey
-
-
     - name: add CloudStack login splash (Ubuntu)
       template: src=templates/motd.j2 dest=/etc/motd.tail
       when: ansible_distribution == "Ubuntu"
@@ -62,13 +53,15 @@
     - name: enable cloudstack-userdata service
       service: name=cloudstack-run-userdata enabled=yes
     - name: enable firstboot-cloudstack service
-      service: name=firstboot-cloudstack enabled=yes
+      service: name=cloudstack-firstboot enabled=yes
 
     - name: remove upstart overrides (if present)
       file: path=/etc/init/firstboot-cloudstack.override state=absent
     - name: remove userdata lock (if present)
       file: path=/var/lib/cloud/user-data.ran state=absent
+    - name: remove userdata history
+      shell: rm -f /var/lib/cloud/instances/*
     - name: remove shell history
       shell: rm -f /root/.*history*
     - name: remove dhcp history
-      shell: rm -f /var/lib/dhc*/dhclient*leas*
+      shell: rm -f /var/lib/dhc*/dhcl*leas*
