--- a/Template.yml
+++ b/Template.yml
@@ -58,13 +58,18 @@
     - name: enable firstboot-cloudstack service
       service: name=cloudstack-firstboot enabled=yes
 
+    - name: setup networking
+      include: Template-Networking.yml
+
     - name: remove upstart overrides (if present)
       file: path=/etc/init/firstboot-cloudstack.override state=absent
     - name: remove userdata lock (if present)
       file: path=/var/lib/cloud/user-data.ran state=absent
     - name: remove userdata history
       shell: rm -Rf /var/lib/cloud/instances/*
-    - name: remove shell history
-      shell: rm -f /root/.*history*
     - name: remove dhcp history
       shell: rm -f /var/lib/dhc*/dhcl*leas*
+    - name: cleanup logs
+      include: Template-Clean-Logs.yml
+    - name: remove shell history
+      shell: rm -f /root/.*history*
