--- a/Template-Clean-Logs.yml
+++ b/Template-Clean-Logs.yml
@@ -36,6 +36,7 @@
     - /var/log/upstart/*
     - /var/log/sa/*
     - /var/log/dmesg*
+    - /var/log/*-201*
   ignore_errors: true
 
 - name: recreate required logs
