--- a/Template-Packages-RHEL.yml
+++ b/Template-Packages-RHEL.yml
@@ -25,6 +25,11 @@
     - libselinux-python
     - git
     - rsyslog
+    - rsync
+    - nmap
+    - nc
+    - strace
+    - bind-utils
 - name: update system (RHEL)
   when: ansible_os_family == "RedHat"
   command: yum upgrade -y
