--- a/Template-Cloud-Password.yml
+++ b/Template-Cloud-Password.yml
@@ -22,3 +22,8 @@
 - name: setup cloudstack-set-guest-password (systemd)
   when: upstart.stat.exists == false and systemd.stat.exists == true
   template: src=templates/set-guest-password.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-set-guest-password.service mode=0644
+
+- name: clear init legacy
+  when: ansible_os_family == "RedHat"
+  shell: chkconfig --del cloudstack-set-guest-password
+  ignore_errors: true
