--- a/Template-Cloud-Firstboot.yml
+++ b/Template-Cloud-Firstboot.yml
@@ -1,11 +1,11 @@
 ---
 - name: add cloud-firstboot script (RHEL)
   when: ansible_os_family == "RedHat"
-  template: src=templates/firstboot-rhel.sh.j2 dest=/usr/share/cloudstack/cloudstack-firstboot mode=0755
+  template: src=templates/RHEL/firstboot-rhel.sh.j2 dest=/usr/share/cloudstack/cloudstack-firstboot mode=0755
 
 - name: add cloud-firstboot script (Debian)
   when: ansible_os_family == "Debian"
-  template: src=templates/firstboot-debian.sh.j2 dest=/usr/share/cloudstack/cloudstack-firstboot mode=0755
+  template: src=templates/Debian/firstboot-debian.sh.j2 dest=/usr/share/cloudstack/cloudstack-firstboot mode=0755
 
 - name: setup cloudstack-firstboot (init)
   when: upstart.stat.exists == false and systemd.stat.exists == false
@@ -13,11 +13,11 @@
 
 - name: setup cloudstack-firstboot (upstart)
   when: upstart.stat.exists == true and systemd.stat.exists == false
-  template: src=templates/firstboot.upstart.j2 dest=/etc/init/cloudstack-firstboot.conf mode=0644
+  template: src=templates/upstart/firstboot.upstart.j2 dest=/etc/init/cloudstack-firstboot.conf mode=0644
 
 - name: setup cloudstack-firstboot (systemd)
   when: upstart.stat.exists == false and systemd.stat.exists == true
-  template: src=templates/firstboot.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-firstboot.service mode=0644
+  template: src=templates/systemd/firstboot.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-firstboot.service mode=0644
 
 - name: clear init legacy
   when: ansible_os_family == "RedHat"
