--- a/Template-Packages-RHEL.yml
+++ b/Template-Packages-RHEL.yml
@@ -8,7 +8,7 @@
   yum: name=http://mirror.pnl.gov/epel/6/i386/epel-release-6-8.noarch.rpm state=present
 - name: install EPEL (RHEL 7)
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int == 7
-  yum: name=http://mirror.pnl.gov/epel/7/x86_64/e/epel-release-7-2.noarch.rpm
+  yum: name=http://mirror.pnl.gov/epel/7/x86_64/e/epel-release-7-5.noarch.rpm state=present
 - name: install "core" packages (RHEL)
   when: ansible_os_family == "RedHat"
   yum: name={{ item }} state=latest
