--- a/Template.yml
+++ b/Template.yml
@@ -5,12 +5,15 @@
       include: Template-Packages-RHEL.yml
     - name: setup packages for Debian/Ubuntu
       include: Template-Packages-Debian.yml
+    - name: setup packages for SUSE
+      include: Template-Packages-SUSE.yml
 
     - name: disable sysklogd (if present)
       service: name=syslog enabled=no
       ignore_errors: true
     - name: enable rsyslog (if not)
       service: name=rsyslog enabled=yes
+      ignore_errors: true
 
     - name: remove cloud user
       user: name=cloud state=absent
