--- a/Template-Packages-Debian.yml
+++ b/Template-Packages-Debian.yml
@@ -5,6 +5,9 @@
 - name: install backports (Debian 7)
   when: ansible_distribution == "Debian" and ansible_distribution_major_version|int == 7
   apt_repository: repo='deb http://http.debian.net/debian wheezy-backports main' state=present
+- name: install backports (Debian 8)
+  when: ansible_distribution == "Debian" and ansible_distribution_major_version|int == 8
+  apt_repository: repo='deb http://http.debian.net/debian jessie-backports main' state=present
 - name: install git ppa (Ubuntu 10.04)
   when: ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 10
   apt_repository: repo='ppa:git-core/ppa' state=present
