--- a/Template.yml
+++ b/Template.yml
@@ -7,6 +7,8 @@
       include: Template-Packages-Debian.yml
     - name: setup packages for SUSE
       include: Template-Packages-SUSE.yml
+    - name: setup packages for FreeBSD
+      include: Template-Packages-FreeBSD.yml
 
     - name: disable sysklogd (if present)
       service: name=syslog enabled=no
