--- a/Template-Packages-Debian.yml
+++ b/Template-Packages-Debian.yml
@@ -31,6 +31,7 @@
     - strace
     - dnsutils
     - iotop
+    - htop
 - name: install latest hwe for Ubuntu 12.04
   apt: name={{ item }} state=latest update_cache=yes
   when: ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 12
