--- a/Template-Cloud-Password.yml
+++ b/Template-Cloud-Password.yml
@@ -12,19 +12,19 @@
   template: src=templates/Ubuntu/cloud-set-guest-password-ubuntu.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
 
 - name: add cloud-set-guest-password script (FreeBSD)
-  when: ansible_distribution == "FreeBSD"
+  when: ansible_os_family == "FreeBSD"
   template: src=templates/FreeBSD/cloud-set-guest-password-freebsd.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
 
 - name: setup cloudstack-set-guest-password (init)
-  when: upstart.stat.exists == false and systemd.stat.exists == false and freebsd.stat.exist == false
+  when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
   file: state=link src=/usr/share/cloudstack/cloudstack-set-guest-password dest=/etc/init.d/cloudstack-set-guest-password mode=0755 force=yes
 
 - name: setup cloudstack-set-guest-password (upstart)
-  when: upstart.stat.exists == true and systemd.stat.exists == false and freebsd.stat.exist == false
+  when: upstart.stat.exists == true and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
   template: src=templates/upstart/set-guest-password.upstart.j2 dest=/etc/init/cloudstack-set-guest-password.conf mode=0644
 
 - name: setup cloudstack-set-guest-password (systemd)
-  when: upstart.stat.exists == false and systemd.stat.exists == true and freebsd.stat.exist == false
+  when: upstart.stat.exists == false and systemd.stat.exists == true and ansible_os_family != "FreeBSD"
   template: src=templates/systemd/set-guest-password.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-set-guest-password.service mode=0644
 
 - name: clear init legacy
