--- a/Template-Cloud-Userdata.yml
+++ b/Template-Cloud-Userdata.yml
@@ -11,17 +11,21 @@
   when: ansible_os_family == "FreeBSD"
   template: src=templates/FreeBSD/cloud-run-userdata-freebsd.j2 dest=/usr/share/cloudstack/cloudstack-run-userdata mode=0755
 
-- name: setup cloudstack-set-guest-password (init)
+- name: setup cloudstack-run-userdata (init)
   when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
   file: state=link src=/usr/share/cloudstack/cloudstack-run-userdata dest=/etc/init.d/cloudstack-run-userdata mode=0755 force=yes
 
-- name: setup cloudstack-set-guest-password (upstart)
+- name: setup cloudstack-run-userdata (upstart)
   when: upstart.stat.exists == true and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
   template: src=templates/upstart/run-userdata.upstart.j2 dest=/etc/init/cloudstack-run-userdata.conf mode=0644
 
-- name: setup cloudstack-set-guest-password (systemd)
+- name: setup cloudstack-run-userdata (systemd)
   when: upstart.stat.exists == false and systemd.stat.exists == true and ansible_os_family != "FreeBSD"
   template: src=templates/systemd/run-userdata.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-run-userdata.service mode=0644
+
+- name: setup cloudstack-run-userdata (FreeBSD)
+  when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family == "FreeBSD"
+  template: src=templates/FreeBSD/cloud-userdata-rc.j2 dest=/usr/local/etc/rc.d/cloudstack-run-userdata mode=0755
 
 - name: clear init legacy
   when: ansible_os_family == "RedHat"
