--- a/Template-Test-Init-System.yml
+++ b/Template-Test-Init-System.yml
@@ -12,9 +12,9 @@
   stat: path=/etc/rc.conf get_md5=no
   register: fbsd
 
-- debug: var=systemd
-  ignore_errors: true
-- debug: var=upstart
-  ignore_errors: true
-- debug: var=fbsd
-  ignore_errors: true
+# - debug: var=systemd
+#   ignore_errors: true
+# - debug: var=upstart
+#   ignore_errors: true
+# - debug: var=fbsd
+#   ignore_errors: true
