Possibly finishing FreeBSD support.

--- a/Template-Clean-Logs.yml
+++ b/Template-Clean-Logs.yml
@@ -44,6 +44,7 @@
     - /var/log/dmesg*
     - /var/log/*-201*
     - /var/log/*gz
+    - /var/log/*bz2
     - /root/*
     - /home/*
   ignore_errors: true
