--- a/Template-Cloud-Firstboot.yml
+++ b/Template-Cloud-Firstboot.yml
@@ -9,7 +9,7 @@
 
 - name: add cloud-firstboot script (FreeBSD)
   when: ansible_os_family == "FreeBSD"
-  template: src=templates/FreeBSD/firstboot-freebsd.j2 dest=/usr/share/cloudstack/cloudstack-firstboot mode=0755
+  template: src=templates/FreeBSD/firstboot-freebsd.j2 dest=/usr/share/cloudstack/cloudstack_firstboot mode=0755
 
 - name: setup cloudstack-firstboot (init)
   when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
@@ -25,7 +25,7 @@
 
 - name: setup cloudstack-set-guest-sshkey (FreeBSD)
   when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family == "FreeBSD"
-  template: src=templates/FreeBSD/firstboot-rc.j2 dest=/usr/local/etc/rc.d/cloudstack-firstboot mode=0755
+  template: src=templates/FreeBSD/firstboot-rc.j2 dest=/usr/local/etc/rc.d/cloudstack_firstboot mode=0755
 
 - name: clear init legacy
   when: ansible_os_family == "RedHat"
