--- a/Setup-Debian.yml
+++ b/Setup-Debian.yml
@@ -32,6 +32,7 @@
     - dnsutils
     - iotop
     - htop
+    - mlocate
 - name: install latest hwe for Ubuntu 12.04
   apt: name={{ item }} state=latest update_cache=yes
   when: ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 12
