--- a/Template.yml
+++ b/Template.yml
@@ -8,7 +8,7 @@
       service: name=syslog enabled=no
       ignore_errors: true
     - name: enable rsyslog (if not)
-      when: ansible_os_family != "FreeBSD"
+      when: ansible_os_family != "FreeBSD" and ansible_service_mgr != "systemd"
       service: name=rsyslog enabled=yes
       ignore_errors: true
     - name: enable rsyslog (if not)
@@ -66,20 +66,3 @@
 
     - name: setup networking
       include: Template-Networking.yml
-
-    - name: remove upstart overrides (if present)
-      file: path=/etc/init/firstboot-cloudstack.override state=absent
-    - name: remove userdata lock (if present)
-      file: path=/var/lib/cloud/user-data.ran state=absent
-    - name: remove userdata history
-      shell: rm -Rf /var/lib/cloud/instances/*
-    - name: remove dhcp history
-      shell: rm -f /var/lib/dhc*/dhcl*leas*
-    - name: cleanup logs
-      include: Template-Clean-Logs.yml
-    - name: remove shell history
-      shell: rm -f /root/.*history*
-    - name: remove authorized keys
-      file: path=/root/.ssh/authorized_keys state=absent
-    - name: remove ssh keys
-      shell: rm -f /etc/ssh/*host*key*
